--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,18 @@
     margin: 0;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body{
     font-family: "Roboto", sans-serif;
     background-color: #ffffff;
+    
 }
 
 /* Menu superior desktop */
+
 #menu-superior{
     display: flex;
     justify-content: flex-end;
@@ -23,7 +29,7 @@ body{
     width: 100%;
     height: 80px;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.529);
+    background-color: rgba(0, 0, 0, 0.584);
 }
 
 #menu-superior ul{
@@ -47,12 +53,11 @@ body{
     height: 50px;
 }
 
-
 #menu-superior ul a:hover{
     font-size: 1.1rem;
     transition: 0.5s;
 }
-/* Menu superior desktop */
+/* Menu superior desktop
 
 /* Menu Mobile */
 #menu-mobile{
@@ -60,8 +65,9 @@ body{
 }
 
 #navegacao-mobile{
-    width: 55%;
+    width: 70%;
 }
+
 #navegacao-mobile nav ul{
     list-style: none;
     padding: 0;
@@ -198,12 +204,8 @@ body{
     margin-bottom: 2rem;
 }
 
-#container-sobre-nos img{
-    width: 560px;
-}
-
 #container-sobre-nos p{
-    width: 570px;
+    width: 520px;
 }
 
 #container-nossos-diferenciais{
@@ -221,6 +223,20 @@ body{
 
 #cards-diferenciais p{  
     max-width: 400px;
+}
+
+#nossos-servicos{
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+}
+
+#nossos-servicos p{
+    text-align: justify;
+    width: 450px;
+}
+
+#nossos-servicos img{
+    border-radius: 2rem;
 }
 
 #container-entre-em-contato{
@@ -265,6 +281,10 @@ form label{
     padding-top: 1rem;
 }
 
+.card input{
+    width: 100%;
+}
+
 .card a{
     background-color: #C5440D;
     width: 300px;
@@ -296,8 +316,20 @@ form label{
 
     #menu-mobile{
         display: block;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
         
     }
+
+    #produto .card{
+        width: 15rem !important;
+    }
+
+    #carrinho-compras{
+        width: 70%;
+    }
+
     /* Menu Resposivo */
 
     /* Banner Resposivo */
@@ -353,6 +385,14 @@ form label{
         width: 200px;
     }
 
+    #nossos-servicos img{
+       width: 350px;
+    }
+
+    #nossos-servicos p{
+        width: 350px;
+    }
+
     #container-entre-em-contato img{
         width: 300px;
     }
@@ -374,6 +414,21 @@ form label{
     
         #menu-mobile{
             display: block;
+        }
+
+        #menu-mobile{
+            display: block;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        #carrinho-compras{
+            width: 40%;
+        }
+
+        #navegacao-mobile{
+            width: 40%;
         }
         /* Menu Resposivo */
 
@@ -409,6 +464,5 @@ form label{
             font-size: 1.2rem;
             text-align: justify;
         }
-        
  }
 /* Resposivo para Tablets */
