--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
     margin: 0;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     display: none;
-}
+} */
 
 body{
     font-family: "Roboto", sans-serif;
@@ -19,14 +19,18 @@ body{
     
 }
 
+/* #divisor {
+    width: 50px;
+} */
+
 /* Menu superior desktop */
 
 #menu-superior{
     display: flex;
     justify-content: flex-end;
-    padding: 0rem 2rem !important;
+    /* padding: 0rem 2rem !important; */
+    padding-left: 2rem;
     align-items: center;
-    width: 100%;
     height: 80px;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.584);
